include $(top_srcdir)/config/common.am

SUBDIRS = doc lyx2lyx

CHMOD = chmod

dist_pkgdata_DATA = CREDITS chkconfig.ltx external_templates encodings \
  languages symbols syntax.default unicodesymbols

# Note that we "chmod 755" manually this file in install-data-hook.
dist_pkgdata_PYTHON = configure.py 

dist_noinst_DATA = \
	images/README \
	images/font-smallcaps.xpm \
	images/math/ams_arrows.xbm \
	images/math/ams_misc.xbm \
	images/math/ams_nrel.xbm \
	images/math/ams_ops.xbm \
	images/math/ams_rel.xbm \
	images/math/arrows.xbm \
	images/math/bop.xbm \
	images/math/brel.xbm \
	images/math/deco.xbm \
	images/math/deco.xpm \
	images/math/delim0.xpm \
	images/math/delim1.xpm \
	images/math/delim.xbm \
	images/math/dots.xbm \
	images/math/font.xbm \
	images/math/greek.xbm \
	images/math/misc.xbm \
	images/math/varsz.xbm

debinddir = $(pkgdatadir)/bind/de
dist_debind_DATA = \
	bind/de/menus.bind

fibinddir = $(pkgdatadir)/bind/fi
dist_fibind_DATA = \
	bind/fi/menus.bind

ptbinddir = $(pkgdatadir)/bind/pt
dist_ptbind_DATA = \
	bind/pt/menus.bind

svbinddir = $(pkgdatadir)/bind/sv
dist_svbind_DATA = \
	bind/sv/menus.bind

binddir = $(pkgdatadir)/bind
dist_bind_DATA = \
	bind/broadway.bind \
	bind/cua.bind \
	bind/cyrkeys.bind \
	bind/emacs.bind \
	bind/greekkeys.bind \
	bind/hollywood.bind \
	bind/latinkeys.bind \
	bind/mac.bind \
	bind/math.bind \
	bind/menus.bind \
	bind/sciword.bind \
	bind/xemacs.bind \
	bind/aqua.bind

caexamplesdir = $(pkgdatadir)/examples/ca
dist_caexamples_DATA = \
	examples/ca/ItemizeBullets.lyx
	examples/ca/mathed.lyx
	examples/ca/splash.lyx

csexamplesdir = $(pkgdatadir)/examples/cs
dist_csexamples_DATA = \
	examples/cs/splash.lyx

daexamplesdir = $(pkgdatadir)/examples/da
dist_daexamples_DATA = \
	examples/da/splash.lyx

deexamplesdir = $(pkgdatadir)/examples/de
dist_deexamples_DATA = \
	examples/de/beispiel_gelyxt.lyx \
	examples/de/beispiel_roh.lyx \
	examples/de/Dezimal.lyx \
	examples/de/ItemizeBullets.lyx \
	examples/de/Lebenslauf.lyx \
	examples/de/multicol.lyx \
	examples/de/serienbrief1.lyx \
	examples/de/serienbrief2.lyx \
	examples/de/serienbrief3.lyx \
	examples/de/splash.lyx

esexamplesdir = $(pkgdatadir)/examples/es
dist_esexamples_DATA = \
	examples/es/ItemizeBullets.lyx \
	examples/es/ejemplo_con_lyx.lyx \
	examples/es/ejemplo_sin_lyx.lyx \
	examples/es/splash.lyx

euexamplesdir = $(pkgdatadir)/examples/eu
dist_euexamples_DATA = \
	examples/eu/adibide_gordina.lyx \
	examples/eu/adibide_lyx-atua.lyx \
	examples/eu/splash.lyx

faexamplesdir = $(pkgdatadir)/examples/fa
dist_faexamples_DATA = \
	examples/fa/splash.lyx

frexamplesdir = $(pkgdatadir)/examples/fr
dist_frexamples_DATA = \
	examples/fr/AlignementDecimal.lyx \
	examples/fr/simplecv.lyx \
	examples/fr/Foils.lyx \
	examples/fr/ListesPuces.lyx \
	examples/fr/exemple_brut.lyx \
	examples/fr/exemple_lyxifie.lyx \
	examples/fr/multicol.lyx \
	examples/fr/splash.lyx

glexamplesdir = $(pkgdatadir)/examples/gl
dist_glexamples_DATA = \
	examples/gl/exemplo_bruto.lyx \
	examples/gl/exemplo_lyxificado.lyx \
	examples/gl/splash.lyx

heexamplesdir = $(pkgdatadir)/examples/he
dist_heexamples_DATA = \
	examples/he/example_lyxified.lyx \
	examples/he/example_raw.lyx \
	examples/he/splash.lyx

huexamplesdir = $(pkgdatadir)/examples/hu
dist_huexamples_DATA = \
	examples/hu/example_lyxified.lyx \
	examples/hu/example_raw.lyx \
	examples/hu/splash.lyx

itexamplesdir = $(pkgdatadir)/examples/it
dist_itexamples_DATA = \
	examples/it/ItemizeBullets.lyx \
	examples/it/splash.lyx
	
jaexamplesdir = $(pkgdatadir)/examples/ja
dist_jaexamples_DATA = \
	examples/ja/splash.lyx

nlexamplesdir = $(pkgdatadir)/examples/nl
dist_nlexamples_DATA = \
	examples/nl/multicol.lyx \
	examples/nl/opsommingstekens.lyx \
	examples/nl/splash.lyx \
	examples/nl/voorbeeld_ruw.lyx \
	examples/nl/voorbeeld_verlyxt.lyx

plexamplesdir = $(pkgdatadir)/examples/pl
dist_plexamples_DATA = \
	examples/pl/splash.lyx

ptexamplesdir = $(pkgdatadir)/examples/pt
dist_ptexamples_DATA = \
	examples/pt/splash.lyx

roexamplesdir = $(pkgdatadir)/examples/ro
dist_roexamples_DATA = \
	examples/ro/splash.lyx

ruexamplesdir = $(pkgdatadir)/examples/ru
dist_ruexamples_DATA = \
	examples/ru/splash.lyx

slexamplesdir = $(pkgdatadir)/examples/sl
dist_slexamples_DATA = \
	examples/sl/primer_lyxan.lyx \
	examples/sl/primer_surov.lyx \
	examples/sl/splash.lyx

examplesdir = $(pkgdatadir)/examples
dist_examples_DATA = \
	examples/CV-image.eps \
	examples/CV-image.png \
	examples/Foils.lyx \
	examples/ItemizeBullets.lyx \
	examples/Literate.lyx \
	examples/aa_sample.lyx \
	examples/aas_sample.lyx \
	examples/addressExample.adr \
	examples/amsart-test.lyx \
	examples/amsbook-test.lyx \
	examples/armenian-article.lyx \
	examples/beamer-g4.jpg \
	examples/beamer-g4-mask.jpg \
	examples/beamer-icsi-logo.pdf \
	examples/beamer-knight1-mask.png \
	examples/beamer-knight1.png \
	examples/beamer-knight2-mask.png \
	examples/beamer-knight2.png \
	examples/beamer-knight3-mask.png \
	examples/beamer-knight3.png \
	examples/beamer-knight4-mask.png \
	examples/beamer-knight4.png \
	examples/beamerlyxexample1.lyx \
	examples/biblioExample.bib \
	examples/chess-article.lyx \
	examples/chessgame.lyx \
	examples/docbook_article.lyx \
	examples/europeCV.lyx \
	examples/example_lyxified.lyx \
	examples/example_raw.lyx \
	examples/iecc05.fen \
	examples/iecc07.fen \
	examples/iecc12.fen \
	examples/landslide.lyx \
	examples/listerrors.lyx \
	examples/modernCV.lyx \
	examples/multicol.lyx \
	examples/noweb2lyx.lyx \
	examples/powerdot-example.lyx \
	examples/script_form.lyx \
	examples/serial_letter1.lyx \
	examples/serial_letter2.lyx \
	examples/serial_letter3.lyx \
	examples/simplecv.lyx \
	examples/splash.lyx

fontsdir = $(pkgdatadir)/fonts
dist_fonts_DATA = \
	fonts/BaKoMaFontLicense.txt \
	fonts/cmex10.ttf \
	fonts/cmmi10.ttf \
	fonts/cmr10.ttf \
	fonts/cmsy10.ttf \
	fonts/esint10.ttf \
	fonts/eufm10.ttf \
	fonts/msam10.ttf \
	fonts/msbm10.ttf \
	fonts/ReadmeBaKoMa4LyX.txt \
	fonts/wasy10.ttf

imagesdir = $(pkgdatadir)/images
dist_images_DATA = \
	images/all-changes-accept.xpm \
	images/all-changes-reject.xpm \
	images/amssymb.xpm \
	images/banner.png \
	images/bookmark-goto.xpm \
	images/bookmark-save.xpm \
	images/box-insert.xpm \
	images/break-line.xpm \
	images/buffer-close.xpm \
	images/buffer-export_dvi.xpm \
	images/buffer-export_latex.xpm \
	images/buffer-export_pdf2.xpm \
	images/buffer-export_ps.xpm \
	images/buffer-export_text.xpm \
	images/buffer-new.xpm \
	images/buffer-reload.xpm \
	images/buffer-update_dvi.xpm \
	images/buffer-update_pdf2.xpm \
	images/buffer-update_ps.xpm \
	images/buffer-view_dvi.xpm \
	images/buffer-view_pdf2.xpm \
	images/buffer-view_ps.xpm \
	images/buffer-write-as.xpm \
	images/buffer-write.xpm \
	images/build-program.xpm \
	images/change-accept.xpm \
	images/change-next.xpm \
	images/change-reject.xpm \
	images/changes-merge.xpm \
	images/changes-output.xpm \
	images/changes-track.xpm \
	images/closetab.xpm \
	images/copy.xpm \
	images/cut.xpm \
	images/demote.xpm \
	images/depth-decrement.xpm \
	images/depth-increment.xpm \
	images/dialog-preferences.xpm \
	images/dialog-show-new-inset_citation.xpm \
	images/dialog-show-new-inset_graphics.xpm \
	images/dialog-show-new-inset_include.xpm \
	images/dialog-show-new-inset_ref.xpm \
	images/dialog-show_character.xpm \
	images/dialog-show_findreplace.xpm \
	images/dialog-show_mathdelimiter.xpm \
	images/dialog-show_mathmatrix.xpm \
	images/dialog-show_print.xpm \
	images/dialog-show_spellchecker.xpm \
	images/dialog-toggle_toc.xpm \
	images/down.xpm \
	images/ert-insert.xpm \
	images/file-open.xpm \
	images/float-insert_figure.xpm \
	images/float-insert_table.xpm \
	images/font-bold.xpm \
	images/font-emph.xpm \
	images/font-free-apply.xpm \
	images/font-noun.xpm \
	images/font-sans.xpm \
	images/footnote-insert.xpm \
	images/index-insert.xpm \
	images/label-insert.xpm \
	images/layout.xpm \
	images/layout-document.xpm \
	images/layout-paragraph.xpm \
	images/layout_Description.xpm \
	images/layout_Enumerate.xpm  \
	images/layout_Itemize.xpm \
	images/layout_List.xpm \
	images/layout_LyX-Code.xpm \
	images/layout_Scrap.xpm \
	images/layout_Section.xpm \
	images/lyx-quit.xpm \
	images/lyx.xpm \
	images/marginalnote-insert.xpm \
	images/math-display.xpm \
	images/math-matrix.xpm \
	images/math-mode.xpm \
	images/math-subscript.xpm \
	images/math-superscript.xpm \
	images/nomencl-insert.xpm \
	images/note-insert.xpm \
	images/note-next.xpm \
	images/paste.xpm \
	images/promote.xpm \
	images/psnfss1.xpm \
	images/psnfss2.xpm \
	images/psnfss3.xpm \
	images/psnfss4.xpm \
	images/redo.xpm \
	images/reload.xpm \
	images/standard.xpm \
	images/tabular-feature_align-center.xpm \
	images/tabular-feature_align-left.xpm \
	images/tabular-feature_align-right.xpm \
	images/tabular-feature_append-column.xpm \
	images/tabular-feature_append-row.xpm \
	images/tabular-feature_delete-column.xpm \
	images/tabular-feature_delete-row.xpm \
	images/tabular-feature_multicolumn.xpm \
	images/tabular-feature_set-all-lines.xpm \
	images/tabular-feature_set-longtabular.xpm \
	images/tabular-feature_set-rotate-cell.xpm \
	images/tabular-feature_toggle-rotate-cell.xpm \
	images/tabular-feature_set-rotate-tabular.xpm \
	images/tabular-feature_toggle-rotate-tabular.xpm \
	images/tabular-feature_toggle-line-bottom.xpm \
	images/tabular-feature_toggle-line-left.xpm \
	images/tabular-feature_toggle-line-right.xpm \
	images/tabular-feature_toggle-line-top.xpm \
	images/tabular-feature_unset-all-lines.xpm \
	images/tabular-feature_valign-bottom.xpm \
	images/tabular-feature_valign-middle.xpm \
	images/tabular-feature_valign-top.xpm \
	images/tabular-insert.xpm \
	images/thesaurus-entry.xpm \
	images/toolbar-toggle_math.xpm \
	images/toolbar-toggle_math_panels.xpm \
	images/toolbar-toggle_table.xpm \
	images/undo.xpm \
	images/unknown.xpm \
	images/up.xpm \
	images/url-insert.xpm

imagesmathdir = $(imagesdir)/math
dist_imagesmath_DATA = \
	images/math/style.xbm \
	images/math/font.xpm \
	images/math/delim.xpm \
	images/math/equation.xpm \
	images/math/matrix.xpm \
	images/math/space.xpm \
	images/math/sqrt-square.xpm \
	images/math/style.xpm \
	images/math/sub.xpm \
	images/math/super.xpm \
	images/math/Bbbk.xpm \
	images/math/Finv.xpm \
	images/math/Game.xpm \
	images/math/Im.xpm \
	images/math/Lleftarrow.xpm \
	images/math/Rrightarrow.xpm \
	images/math/Lsh.xpm \
	images/math/Re.xpm \
	images/math/Rsh.xpm \
	images/math/Vvdash.xpm \
	images/math/acute.xpm \
	images/math/aleph.xpm \
	images/math/alpha.xpm \
	images/math/amalg.xpm \
	images/math/angle.xpm \
	images/math/approx.xpm \
	images/math/approxeq.xpm \
	images/math/asymp.xpm \
	images/math/backepsilon.xpm \
	images/math/backprime.xpm \
	images/math/backsim.xpm \
	images/math/backsimeq.xpm \
	images/math/backslash.xpm \
	images/math/bar.xpm \
	images/math/bars.xpm \
	images/math/barwedge.xpm \
	images/math/because.xpm \
	images/math/beta.xpm \
	images/math/beth.xpm \
	images/math/between.xpm \
	images/math/bigcap.xpm \
	images/math/bigcirc.xpm \
	images/math/bigcup.xpm \
	images/math/bigodot.xpm \
	images/math/bigoplus.xpm \
	images/math/bigotimes.xpm \
	images/math/bigsqcup.xpm \
	images/math/bigstar.xpm \
	images/math/bigtriangledown.xpm \
	images/math/bigtriangleup.xpm \
	images/math/biguplus.xpm \
	images/math/bigvee.xpm \
	images/math/bigwedge.xpm \
	images/math/blacklozenge.xpm \
	images/math/blacksquare.xpm \
	images/math/blacktriangle.xpm \
	images/math/blacktriangledown.xpm \
	images/math/blacktriangleleft.xpm \
	images/math/blacktriangleright.xpm \
	images/math/bot.xpm \
	images/math/bowtie.xpm \
	images/math/boxdot.xpm \
	images/math/boxminus.xpm \
	images/math/boxplus.xpm \
	images/math/boxtimes.xpm \
	images/math/breve.xpm \
	images/math/bullet.xpm \
	images/math/bumpeq.xpm \
	images/math/bumpeq2.xpm \
	images/math/cap.xpm \
	images/math/cap2.xpm \
	images/math/cases.xpm \
	images/math/cdot.xpm \
	images/math/cdots.xpm \
	images/math/centerdot.xpm \
	images/math/check.xpm \
	images/math/chi.xpm \
	images/math/circ.xpm \
	images/math/circeq.xpm \
	images/math/circlearrowleft.xpm \
	images/math/circlearrowright.xpm \
	images/math/circledS.xpm \
	images/math/circledast.xpm \
	images/math/circledcirc.xpm \
	images/math/circleddash.xpm \
	images/math/clubsuit.xpm \
	images/math/complement.xpm \
	images/math/cong.xpm \
	images/math/coprod.xpm \
	images/math/cup.xpm \
	images/math/cup2.xpm \
	images/math/curlyeqprec.xpm \
	images/math/curlyeqsucc.xpm \
	images/math/curlyvee.xpm \
	images/math/curlywedge.xpm \
	images/math/curvearrowleft.xpm \
	images/math/curvearrowright.xpm \
	images/math/dagger.xpm \
	images/math/daleth.xpm \
	images/math/dashleftarrow.xpm \
	images/math/dashrightarrow.xpm \
	images/math/dashv.xpm \
	images/math/ddagger.xpm \
	images/math/ddot.xpm \
	images/math/ddots.xpm \
	images/math/delta.xpm \
	images/math/delta2.xpm \
	images/math/diagdown.xpm \
	images/math/diagup.xpm \
	images/math/diamond.xpm \
	images/math/diamondsuit.xpm \
	images/math/digamma.xpm \
	images/math/div.xpm \
	images/math/divideontimes.xpm \
	images/math/dot.xpm \
	images/math/doteq.xpm \
	images/math/doteqdot.xpm \
	images/math/dotplus.xpm \
	images/math/dotsint.xpm \
	images/math/dotsintop.xpm \
	images/math/doublebarwedge.xpm \
	images/math/downarrow.xpm \
	images/math/downarrow2.xpm \
	images/math/downdownarrows.xpm \
	images/math/downharpoonleft.xpm \
	images/math/downharpoonright.xpm \
	images/math/ell.xpm \
	images/math/empty.xpm \
	images/math/emptyset.xpm \
	images/math/epsilon.xpm \
	images/math/eqcirc.xpm \
	images/math/eqslantgtr.xpm \
	images/math/eqslantless.xpm \
	images/math/equiv.xpm \
	images/math/eta.xpm \
	images/math/eth.xpm \
	images/math/exists.xpm \
	images/math/fallingdotseq.xpm \
	images/math/flat.xpm \
	images/math/forall.xpm \
	images/math/frac.xpm \
	images/math/frac-square.xpm \
	images/math/frown.xpm \
	images/math/functions.xpm \
	images/math/gamma.xpm \
	images/math/gamma2.xpm \
	images/math/geq.xpm \
	images/math/geqq.xpm \
	images/math/geqslant.xpm \
	images/math/gg.xpm \
	images/math/ggg.xpm \
	images/math/gimel.xpm \
	images/math/gnapprox.xpm \
	images/math/gneq.xpm \
	images/math/gneqq.xpm \
	images/math/gnsim.xpm \
	images/math/grave.xpm \
	images/math/gtrapprox.xpm \
	images/math/gtrdot.xpm \
	images/math/gtreqless.xpm \
	images/math/gtreqqless.xpm \
	images/math/gtrless.xpm \
	images/math/gtrsim.xpm \
	images/math/gvertneqq.xpm \
	images/math/hat.xpm \
	images/math/hbar.xpm \
	images/math/heartsuit.xpm \
	images/math/hookleftarrow.xpm \
	images/math/hookrightarrow.xpm \
	images/math/hphantom.xpm \
	images/math/hslash.xpm \
	images/math/iiiint.xpm \
	images/math/iiiintop.xpm \
	images/math/iiint.xpm \
	images/math/iiintop.xpm \
	images/math/iint.xpm \
	images/math/iintop.xpm \
	images/math/imath.xpm \
	images/math/in.xpm \
	images/math/infty.xpm \
	images/math/int.xpm \
	images/math/intercal.xpm \
	images/math/intop.xpm \
	images/math/iota.xpm \
	images/math/jmath.xpm \
	images/math/kappa.xpm \
	images/math/lambda.xpm \
	images/math/lambda2.xpm \
	images/math/langle.xpm \
	images/math/lbrace.xpm \
	images/math/lbrace_rbrace.xpm \
	images/math/lbracket.xpm \
	images/math/lbracket_rbracket.xpm \
	images/math/lceil.xpm \
	images/math/lceil_rceil.xpm \
	images/math/ldots.xpm \
	images/math/leftarrow.xpm \
	images/math/leftarrow2.xpm \
	images/math/leftarrowtail.xpm \
	images/math/leftharpoondown.xpm \
	images/math/leftharpoonup.xpm \
	images/math/leftleftarrows.xpm \
	images/math/leftrightarrow.xpm \
	images/math/leftrightarrow2.xpm \
	images/math/leftrightarrows.xpm \
	images/math/leftrightharpoons.xpm \
	images/math/leftrightsquigarrow.xpm \
	images/math/leftthreetimes.xpm \
	images/math/leq.xpm \
	images/math/leqq.xpm \
	images/math/leqslant.xpm \
	images/math/lessapprox.xpm \
	images/math/lessdot.xpm \
	images/math/lesseqgtr.xpm \
	images/math/lesseqqgtr.xpm \
	images/math/lessgtr.xpm \
	images/math/lesssim.xpm \
	images/math/lfloor.xpm \
	images/math/lfloor_rfloor.xpm \
	images/math/ll.xpm \
	images/math/llcorner.xpm \
	images/math/lll.xpm \
	images/math/lnapprox.xpm \
	images/math/lneq.xpm \
	images/math/lneqq.xpm \
	images/math/lnsim.xpm \
	images/math/longleftarrow.xpm \
	images/math/longleftarrow2.xpm \
	images/math/longleftrightarrow.xpm \
	images/math/longleftrightarrow2.xpm \
	images/math/longmapsto.xpm \
	images/math/longrightarrow.xpm \
	images/math/longrightarrow2.xpm \
	images/math/looparrowleft.xpm \
	images/math/looparrowright.xpm \
	images/math/lozenge.xpm \
	images/math/lparen.xpm \
	images/math/lparen_rparen.xpm \
	images/math/lrcorner.xpm \
	images/math/ltimes.xpm \
	images/math/lvertneqq.xpm \
	images/math/mapsto.xpm \
	images/math/mathbb_C.xpm \
	images/math/mathbb_H.xpm \
	images/math/mathbb_N.xpm \
	images/math/mathbb_Q.xpm \
	images/math/mathbb_R.xpm \
	images/math/mathbb_Z.xpm \
	images/math/mathcal_F.xpm \
	images/math/mathcal_H.xpm \
	images/math/mathcal_L.xpm \
	images/math/mathcal_O.xpm \
	images/math/mathcircumflex.xpm \
	images/math/mathrm_T.xpm \
	images/math/measuredangle.xpm \
	images/math/mho.xpm \
	images/math/mid.xpm \
	images/math/models.xpm \
	images/math/mp.xpm \
	images/math/mu.xpm \
	images/math/multimap.xpm \
	images/math/nabla.xpm \
	images/math/natural.xpm \
	images/math/ncong.xpm \
	images/math/nearrow.xpm \
	images/math/neg.xpm \
	images/math/neq.xpm \
	images/math/nexists.xpm \
	images/math/ngeq.xpm \
	images/math/ngeqq.xpm \
	images/math/ngeqslant.xpm \
	images/math/ngtr.xpm \
	images/math/ni.xpm \
	images/math/nleftarrow.xpm \
	images/math/nleftarrow2.xpm \
	images/math/nleftrightarrow.xpm \
	images/math/nleftrightarrow2.xpm \
	images/math/nleq.xpm \
	images/math/nleqq.xpm \
	images/math/nleqslant.xpm \
	images/math/nless.xpm \
	images/math/nmid.xpm \
	images/math/notin.xpm \
	images/math/nparallel.xpm \
	images/math/nprec.xpm \
	images/math/npreceq.xpm \
	images/math/nrightarrow.xpm \
	images/math/nrightarrow2.xpm \
	images/math/nshortmid.xpm \
	images/math/nshortparallel.xpm \
	images/math/nsim.xpm \
	images/math/nsubseteq.xpm \
	images/math/nsucc.xpm \
	images/math/nsucceq.xpm \
	images/math/nsupseteq.xpm \
	images/math/nsupseteqq.xpm \
	images/math/ntriangleleft.xpm \
	images/math/ntrianglelefteq.xpm \
	images/math/ntriangleright.xpm \
	images/math/ntrianglerighteq.xpm \
	images/math/nu.xpm \
	images/math/nvdash.xpm \
	images/math/nvdash2.xpm \
	images/math/nvdash3.xpm \
	images/math/nwarrow.xpm \
	images/math/odot.xpm \
	images/math/oiint.xpm \
	images/math/oiintop.xpm \
	images/math/oint.xpm \
	images/math/ointclockwise.xpm \
	images/math/ointclockwiseop.xpm \
	images/math/ointctrclockwise.xpm \
	images/math/ointctrclockwiseop.xpm \
	images/math/ointop.xpm \
	images/math/omega.xpm \
	images/math/omega2.xpm \
	images/math/ominus.xpm \
	images/math/oplus.xpm \
	images/math/oslash.xpm \
	images/math/otimes.xpm \
	images/math/overbrace.xpm \
	images/math/overleftarrow.xpm \
	images/math/overleftrightarrow.xpm \
	images/math/overline.xpm \
	images/math/overrightarrow.xpm \
	images/math/overset.xpm \
	images/math/parallel.xpm \
	images/math/partial.xpm \
	images/math/perp.xpm \
	images/math/phantom.xpm \
	images/math/phi.xpm \
	images/math/phi2.xpm \
	images/math/pi.xpm \
	images/math/pi2.xpm \
	images/math/pitchfork.xpm \
	images/math/pm.xpm \
	images/math/prec.xpm \
	images/math/precapprox.xpm \
	images/math/preccurlyeq.xpm \
	images/math/preceq.xpm \
	images/math/precnapprox.xpm \
	images/math/precnsim.xpm \
	images/math/precsim.xpm \
	images/math/prime.xpm \
	images/math/prod.xpm \
	images/math/propto.xpm \
	images/math/psi.xpm \
	images/math/psi2.xpm \
	images/math/rangle.xpm \
	images/math/rbrace.xpm \
	images/math/rbracket.xpm \
	images/math/rceil.xpm \
	images/math/rfloor.xpm \
	images/math/rho.xpm \
	images/math/rightarrow.xpm \
	images/math/rightarrow2.xpm \
	images/math/rightarrowtail.xpm \
	images/math/rightharpoondown.xpm \
	images/math/rightharpoonup.xpm \
	images/math/rightleftarrows.xpm \
	images/math/rightleftharpoons.xpm \
	images/math/rightrightarrows.xpm \
	images/math/rightsquigarrow.xpm \
	images/math/rightthreetimes.xpm \
	images/math/risingdotseq.xpm \
	images/math/root.xpm \
	images/math/rparen.xpm \
	images/math/rtimes.xpm \
	images/math/searrow.xpm \
	images/math/setminus.xpm \
	images/math/sharp.xpm \
	images/math/shortmid.xpm \
	images/math/shortparallel.xpm \
	images/math/sigma.xpm \
	images/math/sigma2.xpm \
	images/math/sim.xpm \
	images/math/simeq.xpm \
	images/math/slash.xpm \
	images/math/smallfrown.xpm \
	images/math/smallsetminus.xpm \
	images/math/smallsmile.xpm \
	images/math/smile.xpm \
	images/math/spadesuit.xpm \
	images/math/sphericalangle.xpm \
	images/math/sqcap.xpm \
	images/math/sqcup.xpm \
	images/math/sqiint.xpm \
	images/math/sqiintop.xpm \
	images/math/sqint.xpm \
	images/math/sqintop.xpm \
	images/math/sqrt.xpm \
	images/math/sqsubset.xpm \
	images/math/sqsubseteq.xpm \
	images/math/sqsupset.xpm \
	images/math/sqsupseteq.xpm \
	images/math/square.xpm \
	images/math/star.xpm \
	images/math/subset.xpm \
	images/math/subset2.xpm \
	images/math/subseteq.xpm \
	images/math/subseteqq.xpm \
	images/math/subsetneq.xpm \
	images/math/subsetneqq.xpm \
	images/math/succ.xpm \
	images/math/succapprox.xpm \
	images/math/succcurlyeq.xpm \
	images/math/succeq.xpm \
	images/math/succnapprox.xpm \
	images/math/succnsim.xpm \
	images/math/succsim.xpm \
	images/math/sum.xpm \
	images/math/supset.xpm \
	images/math/supset2.xpm \
	images/math/supseteq.xpm \
	images/math/supseteqq.xpm \
	images/math/supsetneq.xpm \
	images/math/supsetneqq.xpm \
	images/math/surd.xpm \
	images/math/swarrow.xpm \
	images/math/tau.xpm \
	images/math/textrm_Oe.xpm \
	images/math/textrm_AA.xpm \
	images/math/therefore.xpm \
	images/math/theta.xpm \
	images/math/theta2.xpm \
	images/math/thickapprox.xpm \
	images/math/thicksim.xpm \
	images/math/tilde.xpm \
	images/math/times.xpm \
	images/math/top.xpm \
	images/math/triangle.xpm \
	images/math/triangledown.xpm \
	images/math/triangleleft.xpm \
	images/math/trianglelefteq.xpm \
	images/math/triangleq.xpm \
	images/math/triangleright.xpm \
	images/math/trianglerighteq.xpm \
	images/math/twoheadleftarrow.xpm \
	images/math/twoheadrightarrow.xpm \
	images/math/ulcorner.xpm \
	images/math/underbrace.xpm \
	images/math/underleftarrow.xpm \
	images/math/underleftrightarrow.xpm \
	images/math/underline.xpm \
	images/math/underrightarrow.xpm \
	images/math/underscore.xpm \
	images/math/underset.xpm \
	images/math/uparrow.xpm \
	images/math/uparrow2.xpm \
	images/math/updownarrow.xpm \
	images/math/updownarrow2.xpm \
	images/math/upharpoonleft.xpm \
	images/math/upharpoonright.xpm \
	images/math/uplus.xpm \
	images/math/upsilon.xpm \
	images/math/upsilon2.xpm \
	images/math/upuparrows.xpm \
	images/math/urcorner.xpm \
	images/math/varepsilon.xpm \
	images/math/varkappa.xpm \
	images/math/varnothing.xpm \
	images/math/varphi.xpm \
	images/math/varpi.xpm \
	images/math/varpropto.xpm \
	images/math/varrho.xpm \
	images/math/varsigma.xpm \
	images/math/varsubsetneq.xpm \
	images/math/varsubsetneqq.xpm \
	images/math/varsupsetneq.xpm \
	images/math/varsupsetneqq.xpm \
	images/math/vartheta.xpm \
	images/math/vartriangle.xpm \
	images/math/vartriangleleft.xpm \
	images/math/vartriangleright.xpm \
	images/math/vdash.xpm \
	images/math/vdash2.xpm \
	images/math/vdash3.xpm \
	images/math/vdots.xpm \
	images/math/vec.xpm \
	images/math/vee.xpm \
	images/math/veebar.xpm \
	images/math/vert.xpm \
	images/math/vert2.xpm \
	images/math/vphantom.xpm \
	images/math/wedge.xpm \
	images/math/widehat.xpm \
	images/math/widetilde.xpm \
	images/math/wp.xpm \
	images/math/wr.xpm \
	images/math/xi.xpm \
	images/math/xi2.xpm \
	images/math/zeta.xpm

kbddir = $(pkgdatadir)/kbd
dist_kbd_DATA = \
	kbd/american-2.kmap \
	kbd/american.kmap \
	kbd/arabic.kmap \
	kbd/bg-bds-1251.kmap \
	kbd/brazil.kmap \
	kbd/brazil2.kmap \
	kbd/czech-prg.kmap \
	kbd/czech.kmap \
	kbd/european.kmap \
	kbd/farsi.kmap \
	kbd/francais.kmap \
	kbd/french.kmap \
	kbd/german-2.kmap \
	kbd/german-3.kmap \
	kbd/german.kmap \
	kbd/greek.kmap \
	kbd/hebrew.kmap \
	kbd/koi8-r.kmap \
	kbd/koi8-u.kmap \
	kbd/latvian.kmap \
	kbd/magyar-2.kmap \
	kbd/magyar-3.kmap \
	kbd/magyar.kmap \
	kbd/null.kmap \
	kbd/polish.kmap \
	kbd/polski.kmap \
	kbd/portuges.kmap \
	kbd/romanian.kmap \
	kbd/serbian.kmap \
	kbd/serbocroatian.kmap \
	kbd/sf.kmap \
	kbd/sg.kmap \
	kbd/slovak.kmap \
	kbd/slovene.kmap \
	kbd/thai-kedmanee.kmap \
	kbd/transilvanian.kmap \
	kbd/turkish-f.kmap \
	kbd/turkish.kmap \
	kbd/espanol.kmap

layoutsdir = $(pkgdatadir)/layouts
dist_layouts_DATA =\
	layouts/aa.layout \
	layouts/aapaper.inc \
	layouts/aapaper.layout \
	layouts/aastex.layout \
	layouts/agu-dtd.layout \
	layouts/agu_stdclass.inc \
	layouts/agu_stdcounters.inc \
	layouts/agu_stdlists.inc \
	layouts/agu_stdsections.inc \
	layouts/agu_stdtitle.inc \
	layouts/agums.layout \
	layouts/aguplus.inc \
	layouts/amsart-plain.layout \
	layouts/amsart-seq.layout \
	layouts/amsart.layout \
	layouts/amsbook.layout \
	layouts/amsdefs.inc \
	layouts/amsmaths-plain.inc \
	layouts/amsmaths-seq.inc \
	layouts/amsmaths.inc \
	layouts/apa.layout \
	layouts/arab-article.layout \
	layouts/armenian-article.layout \
	layouts/article.layout \
	layouts/article-beamer.layout \
	layouts/beamer.layout \
	layouts/book.layout \
	layouts/broadway.layout \
	layouts/chess.layout \
	layouts/cl2emult.layout \
	layouts/db_lyxmacros.inc \
	layouts/db_stdclass.inc \
	layouts/db_stdcharstyles.inc \
	layouts/db_stdcounters.inc \
	layouts/db_stdlayouts.inc \
	layouts/db_stdlists.inc \
	layouts/db_stdsections.inc \
	layouts/db_stdstarsections.inc \
	layouts/db_stdstruct.inc \
	layouts/db_stdtitle.inc \
	layouts/dinbrief.layout \
	layouts/docbook-book.layout \
	layouts/docbook-chapter.layout \
	layouts/docbook-section.layout \
	layouts/docbook.layout \
	layouts/dtk.layout \
	layouts/egs.layout \
	layouts/elsart.layout \
	layouts/elsarticle.layout \
	layouts/entcs.layout \
	layouts/europecv.layout \
	layouts/extarticle.layout \
	layouts/extbook.layout \
	layouts/extletter.layout \
	layouts/extreport.layout \
	layouts/foils.layout \
	layouts/g-brief-de.layout \
	layouts/g-brief-en.layout \
	layouts/g-brief2.layout \
	layouts/heb-article.layout \
	layouts/heb-letter.layout \
	layouts/hollywood.layout \
	layouts/IEEEtran.layout \
	layouts/ijmpc.layout \
	layouts/ijmpd.layout \
	layouts/iopart.layout \
	layouts/isprs.layout \
	layouts/jgrga.layout \
	layouts/jss.layout \
	layouts/kluwer.layout \
	layouts/latex8.layout \
	layouts/letter.layout \
	layouts/literate-article.layout \
	layouts/literate-book.layout \
	layouts/literate-report.layout \
	layouts/literate-scrap.inc \
	layouts/llncs.layout \
	layouts/ltugboat.layout \
	layouts/lyxmacros.inc \
	layouts/manpage.layout \
	layouts/memoir.layout \
	layouts/moderncv.layout \
	layouts/mwart.layout \
	layouts/mwbk.layout \
	layouts/mwrep.layout \
	layouts/numarticle.inc \
	layouts/numreport.inc \
	layouts/numrevtex.inc \
	layouts/paper.layout \
	layouts/powerdot.layout \
	layouts/report.layout \
	layouts/revtex.layout \
	layouts/revtex4.layout \
	layouts/scrartcl.layout \
	layouts/scrarticle-beamer.layout \
	layouts/scrbook.layout \
	layouts/scrclass.inc \
	layouts/scrlettr.layout \
	layouts/scrlttr2.layout \
	layouts/scrreprt.layout \
	layouts/seminar.layout \
	layouts/siamltex.layout \
	layouts/sigplanconf.layout \
	layouts/simplecv.layout \
	layouts/singlecol.layout \
	layouts/slides.layout \
	layouts/spie.layout \
	layouts/stdclass.inc \
	layouts/stdcounters.inc \
	layouts/stdfloats.inc \
	layouts/stdlayouts.inc \
	layouts/stdletter.inc \
	layouts/stdlists.inc \
	layouts/stdsections.inc \
	layouts/stdstarsections.inc \
	layouts/stdstruct.inc \
	layouts/stdtitle.inc \
	layouts/svglobal.layout \
	layouts/svglobal3.layout \
	layouts/svjog.layout \
	layouts/svjour.inc \
	layouts/svprobth.layout

scriptsdir = $(pkgdatadir)/scripts
# Note that we "chmod 755" manually these files in install-data-hook.
dist_scripts_PYTHON = \
	scripts/TeXFiles.py \
	scripts/clean_dvi.py \
	scripts/convertDefault.py \
	scripts/csv2lyx.py \
	scripts/date.py \
	scripts/ext_copy.py \
	scripts/fen2ascii.py \
	scripts/fig2pdftex.py \
	scripts/fig2pstex.py \
	scripts/fig_copy.py \
	scripts/layout2layout.py \
	scripts/legacy_lyxpreview2ppm.py \
	scripts/listerrors \
	scripts/lyxpreview2bitmap.py \
	scripts/lyxpreview_tools.py \
	scripts/tex_copy.py

templatesdir = $(pkgdatadir)/templates
dist_templates_DATA = \
	templates/aa.lyx \
	templates/aastex.lyx \
	templates/ACM-sigplan.lyx \
	templates/agu_article.lyx \
	templates/apa.lyx \
	templates/beamer-conference-ornate-20min.lyx \
	templates/biblioExample.bib \
	templates/de_beamer-conference-ornate-20min.lyx \
	templates/dinbrief.lyx \
	templates/docbook_article.lyx \
	templates/elsarticle.lyx \
	templates/fr_beamer-conference-ornate-20min.lyx \
	templates/g-brief2.lyx \
	templates/g-brief-de.lyx \
	templates/g-brief-en.lyx \
	templates/hollywood.lyx \
	templates/IEEEtran.lyx \
	templates/ijmpc.lyx \
	templates/ijmpd.lyx \
	templates/iop-article.lyx \
	templates/JSS-article.lyx \
	templates/kluwer.lyx \
	templates/koma-letter2.lyx \
	templates/latex8.lyx \
	templates/letter.lyx \
	templates/README.new_templates \
	templates/revtex.lyx \
	templates/revtex4.lyx \
	templates/slides.lyx

texdir = $(pkgdatadir)/tex
dist_tex_DATA = \
	tex/broadway.cls \
	tex/hollywood.cls \
	tex/lyxchess.sty \
	tex/lyxskak.sty \
	tex/revtex.cls

uidir = $(pkgdatadir)/ui
dist_ui_DATA = \
	ui/classic.ui \
	ui/default.ui \
	ui/stdmenus.inc \
	ui/stdtoolbars.inc

install-data-hook:
	$(CHMOD) 755 $(DESTDIR)$(pkgdatadir)/configure.py
	for i in $(dist_scripts_PYTHON); do \
		$(CHMOD) 755 $(DESTDIR)$(pkgdatadir)/$$i; \
	done
